--- a/Login.html
+++ b/Login.html
@@ -20,9 +20,9 @@
                     <label for="email">Email</label>
                 </div>
                 <div class="input-box">
-                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                    <input type="password" required>
-                    <label for="">Password</label>
+                    <span class="icon" id="pss"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password" required id="lpss">
+                    <label>Password</label>                    
                 </div>
                 <div class="remember">
                     <label><input type="checkbox">Remember me</label>
@@ -30,7 +30,7 @@
                 </div>
                 <button class="btn" type="submit">Log in</button>
                 <div class="login-register">
-                    <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
+                    <p>Don't have an account? <a href="Register.html" class="register-link">Register</a></p>
                 </div>
             </form>
         </div>
@@ -44,7 +44,21 @@
 
 
 
+    <script >
+        document.getElementById("pss").addEventListener("click", function () {
+const input = document.getElementById("lpss");
+const icon = this.querySelector("ion-icon");
 
+if (input.type === "password") {
+    input.type = "text";
+    icon.setAttribute("name", "lock-open"); // Optional: changes the icon
+} else {
+    input.type = "password";
+    icon.setAttribute("name", "lock-closed");
+}
+});
+
+    </script>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
